# reclawed

./: .gitignore  CLAUDE.md  FEATURES.md  README.md  README_draft.md  pyproject.toml
.claude/: settings.json
.claude/agents/: code-reviewer.md  feature-developer.md  tui-developer.md
.claude/commands/: dev.md  feature.md  features.md  lint.md  status.md  test.md
.claude/hooks/: pre_compact.py  session_start.py
.claude/prompts/: color-coded-workspace-badges.md  per-workspace-config.md
.claude/skills/claude-sdk/: SKILL.md
.claude/skills/python-async/: SKILL.md
.claude/skills/textual-tui/: SKILL.md
.claude/skills/websocket-relay/: SKILL.md
src/clawdia/: __init__.py  __main__.py  app.py  ci_watcher.py  claude_session.py  cli.py  commands.py  config.py  demo.py  git_utils.py  importer.py  models.py  store.py  utils.py
src/clawdia/relay/: client.py  daemon.py  embedded.py  protocol.py  server.py  tunnel.py
src/clawdia/screens/: __init__.py  chat.py  document.py  file_open.py  group.py  hooks_manager.py  mcp_manager.py  memory.py  review.py  review_launcher.py  search.py  sessions.py  settings.py  spawn_worker.py
src/clawdia/styles/: app.tcss
src/clawdia/voice/: __init__.py  engine.py  recorder.py  stt.py  tts.py
src/clawdia/widgets/: __init__.py  ask_user_question.py  attachment_preview.py  chat_list_item.py  chat_sidebar.py  choice_buttons.py  compose_area.py  file_input_screen.py  message_bubble.py  message_list.py  quote_preview.py  reaction_prompt.py  status_bar.py  tool_approval.py  workspace_picker.py
src/reclawed/: __init__.py  __main__.py  app.py  claude.py  claude_session.py  claude_settings.py  cli.py  commands.py  config.py  crypto.py  git_utils.py  importer.py  models.py  review_engine.py  store.py  utils.py
src/reclawed/relay/: client.py  daemon.py  embedded.py  protocol.py  server.py
src/reclawed/screens/: chat.py  document.py  file_open.py  group.py  hooks_manager.py  mcp_manager.py  review.py  review_launcher.py  (+4 more)
tests/: conftest.py  test_choice_detection.py  test_ci_watcher.py  test_claude.py  test_claude_session.py  test_claude_settings.py  test_clickable_files.py  test_config.py  test_crypto.py  test_daemon.py  test_document_screen.py  test_git_utils.py  test_group_respond.py  test_importer.py  test_mcp_manager.py  test_message_queue.py  test_models.py  test_orchestrator.py  test_question_detection.py  test_relay.py  test_resize_handle.py  test_review_engine.py  test_store.py  test_tunnel.py  test_utils.py  test_voice.py  test_widgets.py
(+18 files in other folders)
