[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clawdia"
version = "0.1.0"
description = "Clawdia: Chat, Launch & Administer Whole Divisions of Intelligent Agents"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.80.0",
    "click>=8.1",
    "websockets>=12.0",
    "cryptography>=42.0",
    "claude-agent-sdk>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "textual-dev>=1.0",
]
voice = [
    "faster-whisper>=1.0",
    "edge-tts>=6.1",
    "sounddevice>=0.4",
    "numpy>=1.26",
]

[project.scripts]
clawdia = "clawdia.cli:main"
clawdia-relay = "clawdia.relay.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
